Fix that colours were broken on the donut chart. Update home page.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -32,6 +32,7 @@
     --foreground: #060e09;
 
     --muted: #f1f5f9;
+    --muted-hsl: 210 40% 96%;
     --muted-foreground: #64748b;
 
     --popover: #ffffff;
@@ -44,9 +45,11 @@
     --input: #e2e8f0;
 
     --primary: #5ab888;
+    --primary-hsl: 149 40% 54%;
     --primary-foreground: #1d3c2c;
 
     --secondary: #a296d2;
+    --secondary-hsl: 252 40% 71%;
     --secondary-foreground: #4d4862;
 
     --accent: #b882c9;
@@ -65,6 +68,7 @@
     --foreground: #f1f9f4;
 
     --muted: #382c68;
+    --muted-hsl: 252 41% 29%;
     --muted-foreground: #94a3b8;
 
     --popover: #020817;
@@ -77,9 +81,11 @@
     --input: #382c68;
 
     --primary: #46a474;
+    --primary-hsl: 149 40% 46%;
     --primary-foreground: #183727;
 
     --secondary: #382c68;
+    --secondary-hsl: 252 41% 29%;
     --secondary-foreground: #1e1736;
 
     --accent: #6c367d;
@@ -102,9 +108,9 @@
     --vis-tooltip-backdrop-filter: none !important;
     --vis-tooltip-padding: none !important;
 
-    --vis-primary-color: var(--primary);
-    --vis-secondary-color: 160 81% 40%;
-    --vis-text-color: var(--muted-foreground);
+    --vis-primary-color: var(--primary-hsl);
+    --vis-secondary-color: var(--secondary-hsl);
+    --vis-text-color: var(--muted-hsl);
   }
 
   * {
